# MIMUW-SIK

./: README.md
zad1/: CMakeLists.txt
zad1/src/: compile-run  sender.cpp  simple-compile-run
zad2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sikradio-sender  test.py
zad2/include/: common.h  concurrent_queue.h  concurrent_structs.h  connection.h  err.h  gui_handler.h  parsing_helper.h  utils.h
zad2/src/: receiver.cpp  sender.cpp
